- "set" command: add key "hac_missvals" to select the policy
  for HAC estimation when there are incomplete observations;
  and make the Equal Spacing method the default
- "gnuplot" and "plot" commands: putting an .html suffix onto
  the output filename now invokes gnuplot's "canvas" driver
- "midasreg" command: generate more specific error message
  for invalid specification
- strptime() and strftime() functions: generalize to allow
  vectorized usage, and add variants (strpday, strfday) to
  work with epoch days rather than Unix time
- pexpand() function: add optional boolean switch to expand
  in the cross-sectional dimension
- readfile() function: ensure that we construct a legitimate
  local filename when downloading a web resource
- normtest() function: add option to include all available
  tests in the returned matrix
- int() function: return NA if the integer part of the argument
  lies beyond the range of a 32-bit signed integer
- instring() and strstr() functions: drop the policy of auto-
  escaping the string to be found
- CSV data importation: be less hasty in concluding that the
  column separator is comma
- CSV importation via GUI: clarify the dialog that governs
  how the first column is treated; also don't show any string
  tables at the moment of importation (strings tables can now
  be accessed under the Data menu)
- "join" via the GUI: make it evident that specifying keys
  may not be necessary with time-series data; fix a bug with
  use of the filter option
- "system" command: ensure that the $system bundle includes
  the sample limits as "sample_t1" and "sample_t2"
- Script editor, split pane: ensure that when line-numbering
  is selected it carries over to the new pane; also improve
  tab-completion for names of functions
- Drag and drop of data file onto gretl: offer a choice of
  replacing or trying to append to the current dataset
- Fix error message for invalid (string) array index